k8s-ops/deploy-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: hls-adaptive-bitrate-system
    tier: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: hls-apaptive-bitrate-system-frontend
        imagePullPolicy: Never  # 🚀 Prevents Kubernetes from pulling from Docker Hub
        ports:
        - containerPort: 80
