k8s-ops/deploy-process-video.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: process-video
  labels:
    app: process-video
spec:
  replicas: 1
  selector:
    matchLabels:
      app:  process-video
  template:
    metadata:
      labels:
        app:  process-video
    spec:
      containers:
      - name: process-video
        image: hls-apaptive-bitrate-system-process-video
        ports:
        - containerPort: 80
